# ViroScope-OS

./: .gitignore  README.md  install.sh  pyproject.toml  viroscope.sh
ViroScope-OS/: README.md
ViroScope-OS/docs/: PRD.md  PROJECT.md
configs/: qc.ini
docs/: AI_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CODING_GUIDE.md  DATABASE_GUIDE.md  KNOWLEDGE_GUIDE.md  MODULE_SPEC.md  PRD.md  PROJECT.md  RESEARCH_SPEC.md  ROADMAP.md  VISION.md  WORKFLOW.md
scripts/: push_api.py
specs/: README.md  interpretation.md  phylogeny.md  visualization.md
src/viroscope/: __init__.py  cli.py
src/viroscope.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/viroscope/core/: config.py  loader.py  plugin.py
src/viroscope/plugins/: ai.py  alignment.py  annotation.py  evolution.py  mutation.py  nextclade.py  qc.py  report.py  tree.py  visualization.py
