[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "viroscope"
version = "0.2.0"
description = "AI-powered virus research operating system"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
viroscope = "viroscope.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
